--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    
     "dev": "nodemon api/server.js",
     "start": "nodemon api/server.js"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
 }
